platform_versioned_docs/version-4.7.0/install/gitops.mdx
---
title: Install with ArgoCD
sidebar_label: With ArgoCD
sidebar_position: 3
description: Learn how to install vCluster Platform in a GitOps style using ArgoCD.
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import ListHelmVersions from "../_partials/install/list-helm-versions.mdx";
import BasePrerequisites from '../_partials/install/base-prerequisites.mdx';
import LoginAfterHelmInstall from '../_partials/install/login-after-helm-install.mdx';
import InstallNextSteps from '../_partials/install/install-next-steps.mdx';
import NetworkPorts from '../_partials/install/open-ports.mdx';

The platform can be installed using [GitOps](https://argoproj.github.io/cd/), similar to how you would for installing applications in your Kubernetes clusters. This guide provides a quick overview of deploying the platform with GitOps. Since the platform is similar to other applications, standard GitOps practices are equally applicable.

:::info
This guide details installing the platform using GitOps practices, specifically with ArgoCD. Although ArgoCD is used as an example, the principles are applicable to other GitOps tools.
:::

## Prerequisites

<BasePrerequisites />

### ArgoCD

ArgoCD needs to be installed and configured on the host cluster. Follow the [Argo CD Installation Guide](https://argo-cd.readthedocs.io/en/stable/getting_started/) to install it.

### Resource requirements

<NetworkPorts />


## Deployment

:::note Required labels for manual namespace creation

If you are manually creating the vCluster namespace as part of your GitOps workflow, ensure you  apply the following labels:

  ```yaml
  metadata:
    labels:
      loft.sh/vcluster-instance-name: dev-reliability     # Identifies the specific vCluster instance name
      loft.sh/vcluster-instance-namespace: loft-p-default # Specifies the parent namespace in Loft
      loft.sh/vcluster-instance-project: default          # Defines the Loft project this vCluster belongs to
  ```

In other workflows, these labels are automatically applied to the namespace created for you.
:::

### Basic installation

<!-- vale off -->
:::note
Before beginning, take a few minutes to review the [installation with Helm](./helm.mdx) section of the documentation.
Helm is particularly well-suited for GitOps as it provides a standardized way to package and version Kubernetes applications.
:::
<!-- vale on -->

The most basic GitOps platform installation consists of an [ArgoCD Application](https://argo-cd.readthedocs.io/en/stable/operator-manual/declarative-setup/#applications) with the platform chart and your desired values.

#### Create ArgoCD application

Execute the following command to create a simple ArgoCD Application.

```yaml title="Create platform ArgoCD Application"
PLATFORM_VERSION=__PLATFORM_VERSION__
cat <<EOF > gitops-application.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: vcluster-platform
  namespace: argocd
spec:
  destination:
    name: ""
    namespace: vcluster-platform
    server: "https://kubernetes.default.svc"
  source:
    path: ""
    repoURL: "https://charts.loft.sh"
    targetRevision: $PLATFORM_VERSION
    chart: vcluster-platform
    helm:
      parameters:
        # admin
        - name: admin.create
          value: "true"
        - name: admin.username
          value: admin
        - name: admin.password
          value: password

        # ingress
        - name: ingress.enabled
          value: "true"
        - name: ingress.host
          value: "vcluster-platform.example"
        - name: ingress.name
          value: "vcluster-platform-ingress"

        # audit
        - name: audit.enableSideCar
          value: "true"
        - name: config.audit.level
          value: "1"

        # config
        - name: config.loftHost
          value: "https://vcluster-platform.example"

  project: default
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    syncOptions:
      - CreateNamespace=true
EOF
```

<!-- vale off -->

#### Apply ArgoCD application

<!-- vale on -->

<ListHelmVersions />

Apply the ArgoCD Application to your cluster using the `kubectl apply` command.

```bash title="Apply the ArgoCD Application"
kubectl apply -f gitops-application.yaml
```

Alternatively, follow the regular GitOps process and push the `gitops-application.yaml` file to your Git repository.

The ArgoCD `Application` would install the platform into the
current-context configured for your Kubernetes cluster, in the `vcluster-platform` namespace. In this example, values are being passed to set some basic configurations including:

- Administrator user/password
- Ingress configuration
- Audit configuration

The platform Deployment automatically installs the platform agent in the local cluster. To manage the agent installation manually, refer to the [agent](#agents) section.

:::warning ArgoCD and Helm Releases
If you are using ArgoCD to manage your platform instance, you won't be able to update the platform configuration through the platform UI. This shouldn't be a problem if you're following a GitOps approach, as manual updates are typically avoided. However, it's important to note that ArgoCD does not deploy the Helm release secret.
:::

## Configuration

One of the core tenets of the platform is that all platform resources are just "normal" Kubernetes resources. This means that you can manage any platform objects in the same way you'd manage any other Kubernetes resources in your GitOps workflow.

To generate the appropriate manifests to manage each platform resource type, check out the [API documentation](../api/resources/project/project.mdx) where you can find example manifests and argument references for nearly all platform resource types. Alternatively, you can use the platform UI to build out your required objects and simply snag the YAML output from the build pane and use that as your manifest content.

Here is an example of creating a `Team`, and a `Project` that the `Team` is a member of. You could manage these resources in your GitOps platform, then allow project users to create resources in the platform as they wish. This would put the core pieces under GitOps, freeing teams to control their own environments in the platform manually if they wish.

The following manifests could be added into a custom Helm chart, or used as manifests in a repo connected to ArgoCD. This is a contrived example, of course, but the main point here is that all platform resources are just "normal" Kubernetes (custom) resources that can be managed with your GitOps tooling, or any other Kubernetes-centric tooling.

:::info management.loft.sh vs storage.loft.sh
When working with Platform CRDs in GitOps workflows, you'll encounter two API groups:

- **management.loft.sh**: Use this to define the desired state of resources. All resources you create (Teams, Projects, etc.) should use this API group.
- **storage.loft.sh**: Used internally by Platform controllers to store actual state. This is auto-generated and should not be manually created.

For GitOps, always define resources using `management.loft.sh`. You'll see `storage.loft.sh` referenced in some spec fields (like project members) - this is correct as it references existing storage-backed resources.
:::

```yaml title="Example Team and Project resources"
---
apiVersion: management.loft.sh/v1
kind: Team
metadata:
  name: acme-team
spec:
  displayName: acme-team
  owner:
    user: admin
  access:
    - verbs:
        - "*"
      subresources:
        - "*"
      users:
        - admin
    - name: vcluster-platform-access
      verbs:
        - get
        - bind
      subresources:
        - clusters
      teams:
        - acme-team

---
kind: Project
apiVersion: management.loft.sh/v1
metadata:
  name: acme-team-project
spec:
  displayName: acme-team-project
  owner:
    user: admin
  quotas: {}
  allowedClusters:
    - name: "*"
  allowedTemplates:
    - kind: VirtualClusterTemplate
      group: storage.loft.sh
      name: "*"
    - kind: SpaceTemplate
      group: storage.loft.sh
      name: "*"
  members:
    - kind: Team
      group: storage.loft.sh
      name: acme-team
      clusterRole: loft-management-project-admin
  access:
    - name: vcluster-platform-admin-access
      verbs:
        - get
        - update
        - patch
        - delete
      subresources:
        - "*"
      users:
        - admin
      teams:
        - acme-team
```


### Connected clusters

One of the benefits of the platform is that you can easily manage resources located in many physical clusters by adding them to the platform and using it as your central point of management.

When you add a "connected" cluster to the platform, a `Cluster` resource is created and a platform Agent is installed in the cluster to handle local reconciliation tasks.

If you are managing the platform via GitOps, you may also wish to manage these connected clusters in a similar fashion, rather than letting the platform install and manage the Agent.

:::tip
Managing connected clusters via GitOps offers several advantages:

- Consistency: Ensures all clusters are configured identically.
- Version Control: Keeps track of changes to cluster configurations over time.
- Automation: Reduces manual intervention and potential for human error.
- Auditability: Provides a clear record of who made changes and when.
  :::

### Cluster resources

  If you would like to manage the platform _and_ its agents via your GitOps tooling, you likely also want to manage the connected cluster configurations that live inside the platform. For information about networking requirements, see [Networking](/docs/platform/administer/clusters/advanced/networking).

  These configuration elements inform the platform of:

  - The remotely connected clusters
  - How to connect to those clusters to validate the agent installation
  - How to proxy Kubernetes commands from the central platform instance to the remote clusters

  Each cluster requires two resources:

  - a `Cluster` object that simply defines the cluster name and the owner of the cluster inside the platform
  - an associated Secret that contains relevant configuration information for the platform to connect to the cluster.

  A common strategy for bundling cluster data with your primary platform `Application` (as in an ArgoCD `Application` object) is to write a simple "parent" Helm chart that includes the platform as a dependency. This parent chart can contain anything you'd like, but in this case would be used to include the `Cluster` objects and their associated Secret objects.

  :::warning Cluster Secrets
  The secret associated with a Cluster object necessarily includes authentication data to access the remote cluster, so take care to ensure that this information is handled appropriately.
  :::

  A simple `Chart.yaml` that includes the base platform chart as a dependency may look similar to this, but you'll need to update `$PLATFORM_VERSION` with a valid platform version.

  ```yaml title="Chart.yaml"
  apiVersion: v2
  name: vcluster-platform-manager
  description: A parent Helm chart for vCluster Platform
  type: application
  version: 1.0.0
  dependencies:
    - name: vcluster-platform
      version: $PLATFORM_VERSION
      repository: https://charts.loft.sh
  ```

  Values that need to be passed to the dependent platform chart can be passed by referring to the dependency name, in this case, `vcluster-platform`. For example, if you wanted to set the `replicaCount` value on the platform chart, you could do as follows in a `values.yaml` file:

  ```yaml
  vcluster-platform:
    replicaCount: 3
  ```

  :::info Who is managing the agent?
  Remember, if you want to manage the platform agent via your GitOps workflow,
  make sure you set the `export DISABLE_AGENT=true` environment variable to `true` for your platform installation.
  :::

  The "parent" Helm chart can now include any additional resources that you may want to install with your platform instance. In this case, the chart should include both the Cluster and Secret resources for any connected clusters. You can accomplish this by having a basic template that iterates over an array of clusters that users can provide via values, something like the following:

  ```yaml title="Template for Cluster and Secret resources"
{{ range .Values.clusters }}
---
apiVersion: management.loft.sh/v1
kind: Cluster
metadata:
  name: "{{ .name }}"
  annotations:
    # highlight-next-line
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  access:
    - subresources:
        - '*' 
      users:
        - admin
      verbs:
        - '*'
  config:
    secretName: "loft-cluster-config-{{ .name }}"
    secretNamespace: "vcluster-platform"
  displayName: "{{ .name }}"
  owner:
    user: "admin"
{{- end }}

---
{{- range .Values.clusters }}
apiVersion: v1
kind: Secret
metadata:
  name: "loft-cluster-config-{{ .name }}"
  namespace: "vcluster-platform"
type: Opaque
data:
  config: "{{ .config | default "" | b64enc }}"
{{- end }}

```

With the preceding template, users would provide an array of maps containing a `name` and a `config` field. For example:

```yaml title="Example cluster configuration"
clusters:
  - name: my-connected-cluster
    config: |
      apiVersion: v1
      kind: Config
      clusters:
        - name: my-connected-cluster
          cluster:
            certificate-authority-data: YOUR-CA-DATA-HERE
            server: https://1.2.3.4:6443
      contexts:
        - name: my-connected-cluster-context
          context:
            cluster: my-connected-cluster
            namespace: kube-system
            user: my-connected-cluster-user
      current-context: my-connected-cluster-context
      preferences: {}
      users:
        - name: my-connected-cluster-user
          user:
            token: YOUR-TOKEN-HERE
```

:::warning Missing CRDs?
You may have noticed a strange annotation on the `Cluster` resource
`argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true`.
This annotation tells ArgoCD to skip the dry run/check of the resource.

You need this
for initial installations as the platform itself is going to install the `Cluster` CRD
into the cluster. Without this annotation, the `Application` is not going to
sync.
:::

#### Agents

If you've turned off agent installation on your platform, ensure you manually install the platform agent in each connected cluster. Without this, the platform cannot operate within the connected cluster.

The most obvious difference in managing the agents compared to the platform manager is that the agents require installation in the connected "remote" clusters, not local to the platform manager. After adding the relevant clusters as available clusters in your ArgoCD configuration, you can simply create another ArgoCD `Application` to manage the agent.

Here is a basic example
:::info Remember to update `$PLATFORM_VERSION` variable with a valid platform version.
:::

<!-- vale off -->

```yaml title="ArgoCD Application for platform agent"
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: vcluster-platform-agent-my-other-cluster
  namespace: argocd
spec:
  destination:
    name: ""
    namespace: vcluster-platform
    server: "https://my-other-cluster:6443"
  source:
    path: ""
    repoURL: "https://charts.loft.sh"
    targetRevision: "$PLATFORM_VERSION"
    chart: vcluster-platform
    helm:
      parameters:
        # Required parameter
        - name: agentOnly
          value: true

        # Custom parameters
        - name: env.SOMEVAR
          value: my-value
  project: default
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    syncOptions:
      - CreateNamespace=true
```

<!-- vale on -->

Once again, note that when managing the agent installations via ArgoCD or your GitOps tooling of choice, ensure that the `DISABLE_AGENT` environment variable is set to `true` for your platform deployment.


## Manage GitOps drift

When managing Platform resources through GitOps, you may encounter drift detection issues where resources appear out-of-sync even immediately after a successful sync. This typically occurs because Platform controllers modify certain fields after resource creation.

### Why drift occurs

The Platform controllers may add or modify fields on your resources for several reasons:

- **Status fields**: Controllers continuously update status subresources to reflect current state (quota usage, conditions, health checks)
- **Default values**: Empty or omitted spec fields may be populated with default values
- **Access rules**: Default access rules may be added to resources if not explicitly specified
- **Annotations**: Controllers add tracking annotations like `loft.sh/apply`, `loft.sh/project-namespace`
- **Finalizers**: The `loft.sh/cleanup` finalizer is auto-added to managed resources

### Drift-causing fields by resource type

The following table summarizes fields that commonly cause drift for each Platform CRD:

| Resource type | Common drift fields | Description |
|---------------|---------------------|-------------|
| **Project** | `status`, `spec.access`, `spec.quotas`, `spec.requireTemplate`, `spec.requirePreset`, `metadata.finalizers`, `metadata.annotations` | Status, default access rules, empty objects get defaults, finalizers and tracking annotations auto-added |
| **Team** | `status`, `spec.access`, `metadata.finalizers`, `metadata.annotations` | Status, default access rules, finalizers and tracking annotations auto-added |
| **VirtualClusterTemplate** | `status`, `spec.template.metadata`, `spec.template.instanceTemplate.metadata`, `spec.template.spaceTemplate.metadata`, `spec.template.accessPoint.ingress`, `metadata.annotations` | Empty nested objects, tracking annotations like `loft.sh/last-applied-parameter-defaults` |
| **SpaceTemplate** | `status`, `spec.template.metadata` | Status and metadata defaults |
| **SharedSecret** | `status` | Status field updates |
| **Cluster** | `status`, `spec.access` | Connection status and default access rules |
| **VirtualClusterInstance** | `status`, `spec.clusterRef` | Instance status continuously updated |

### GitOps tool configuration

<Tabs
  defaultValue="argocd"
  values={[
    { label: "ArgoCD", value: "argocd" },
    { label: "Flux", value: "flux" },
  ]}
>
  <TabItem value="argocd">

ArgoCD provides several mechanisms to handle drift from Platform resources.

#### Application-level ignore differences

Configure `ignoreDifferences` in your ArgoCD Application to ignore specific fields:

```yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: platform-resources
  namespace: argocd
spec:
  # ... other config ...
  ignoreDifferences:
    # Ignore status for all Platform CRDs
    - group: management.loft.sh
      kind: "*"
      jsonPointers:
        - /status

    # Project-specific: ignore empty spec objects that get defaults
    - group: management.loft.sh
      kind: Project
      jsonPointers:
        - /spec/quotas
        - /spec/requireTemplate
        - /spec/requirePreset
        - /spec/vault

    # Team-specific: ignore access modifications
    - group: management.loft.sh
      kind: Team
      jsonPointers:
        - /spec/access

    # VirtualClusterTemplate: ignore nested empty metadata objects
    - group: management.loft.sh
      kind: VirtualClusterTemplate
      jsonPointers:
        - /spec/template/metadata
        - /spec/template/instanceTemplate/metadata
        - /spec/template/spaceTemplate/metadata
        - /spec/template/pro

  syncPolicy:
    syncOptions:
      # Ensures ignored differences are also ignored during sync
      - RespectIgnoreDifferences=true
```

:::warning RespectIgnoreDifferences required
Always include `RespectIgnoreDifferences=true` in sync options. Without this, ArgoCD ignores differences for display purposes only but still applies the desired state during sync, overwriting controller-managed fields.
:::

#### Use managed fields managers

For more dynamic drift handling, configure ArgoCD to trust specific field managers:

```yaml
ignoreDifferences:
  - group: management.loft.sh
    kind: "*"
    managedFieldsManagers:
      - loft
```

This tells ArgoCD to ignore any fields managed by the `loft` controller, automatically adapting to field changes without explicit paths.

#### System-level configuration

For cluster-wide settings, configure the `argocd-cm` ConfigMap:

```yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: argocd-cm
  namespace: argocd
data:
  # Ignore status field for all Platform CRDs
  resource.customizations.ignoreDifferences.management.loft.sh_Project: |
    jsonPointers:
      - /status
      - /spec/quotas
  resource.customizations.ignoreDifferences.management.loft.sh_Team: |
    jsonPointers:
      - /status
  resource.customizations.ignoreDifferences.management.loft.sh_VirtualClusterTemplate: |
    jsonPointers:
      - /status
  resource.customizations.ignoreDifferences.management.loft.sh_SharedSecret: |
    jsonPointers:
      - /status

  # Alternative: ignore status for all resources
  resource.compareoptions: |
    ignoreResourceStatusField: all
```

  </TabItem>
  <TabItem value="flux">

Flux uses server-side apply for drift detection and correction, which handles many drift scenarios automatically through Kubernetes managed fields semantics.

#### Best practices

1. **Omit fields you don't manage**: Remove fields that controllers manage (like `status: {}`) from your manifests entirely. Server-side apply only manages fields you explicitly set.

2. **Use field managers**: Flux's `kustomize-controller` acts as a distinct field manager. Fields managed by Platform controllers won't conflict as long as you don't include them in your manifests.

3. **Minimal manifests**: Define only the fields you want to control:

```yaml
# Good: Minimal manifest - Flux won't conflict with controller-managed fields
apiVersion: management.loft.sh/v1
kind: Project
metadata:
  name: my-project
spec:
  displayName: My Project
  allowedClusters:
    - name: "*"
  members:
    - kind: User
      group: storage.loft.sh
      name: admin
      clusterRole: loft-management-project-admin
```

```yaml
# Avoid: Including empty objects that controllers may populate
apiVersion: management.loft.sh/v1
kind: Project
metadata:
  name: my-project
spec:
  displayName: My Project
  quotas: {}           # Remove - controllers will manage this
  requireTemplate: {}  # Remove - let the controller set defaults
  vault: {}            # Remove - unless explicitly configuring Vault
status: {}             # Remove - never include status in manifests
```

4. **Force reconciliation for immutable fields**: If drift correction fails due to immutable fields, use the `force` option in your Kustomization:

```yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
spec:
  force: true  # Recreates resources when patching fails
```

  </TabItem>
</Tabs>

### Troubleshoot drift issues

If resources continue showing as out-of-sync:

1. **Examine the diff**: Check which specific fields are causing drift in your GitOps tool's UI or CLI
2. **Review controller logs**: Platform controller logs may indicate why fields are being modified
3. **Compare live vs desired state**: Use `kubectl get <resource> -o yaml` to see the full live state
4. **Check for webhooks**: Mutating admission webhooks may modify resources after apply


## Login

<LoginAfterHelmInstall />

## Next steps

### Create virtual clusters

<InstallNextSteps />

